change gradle build and upgrade  libs ...