@@ -1,50 +1,56 @@
 group 'ElephantNoteFX'
 version 'ElephantNoteFX-0.1'
 
-apply from: 'javafx.plugin'
+buildscript {
+    dependencies {
+        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
+    }
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+}
 apply plugin: 'java'
 apply plugin: 'idea'
 
 
 repositories {
+    mavenLocal()
     mavenCentral()
     jcenter {
         url "http://jcenter.bintray.com/"
     }
 }
 
-configurations {
-    provided
-    provided.extendsFrom(compile)
-}
-
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.7.19'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.8.47'
 
     runtime(['org.controlsfx:controlsfx:8.40.12',
-             'org.xerial:sqlite-jdbc:3.8.11.2',
-             'com.j256.ormlite:ormlite-core:4.48',
-             'com.j256.ormlite:ormlite-jdbc:4.48',
+             'org.xerial:sqlite-jdbc:3.19.3',
+             'com.j256.ormlite:ormlite-core:5.0',
+             'com.j256.ormlite:ormlite-jdbc:5.0',
              'org.apache.commons:commons-lang3:3.4'
-
     ])
-    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.7'
-    
-    compile 'com.j256.ormlite:ormlite-core:4.48'
-    compile 'com.j256.ormlite:ormlite-jdbc:4.48'
+
+    compile 'com.j256.ormlite:ormlite-core:5.0'
+    compile 'com.j256.ormlite:ormlite-jdbc:5.0'
+
     compile 'org.apache.commons:commons-lang3:3.4'
-    compile 'org.apache.logging.log4j:log4j-core:2.4.1'
-    compile 'org.apache.logging.log4j:log4j-api:2.4.1'
+    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
+    compile 'commons-io:commons-io:2.4'
+
     compile 'org.controlsfx:controlsfx:8.40.12'
     compile 'com.google.inject:guice:4.1.0'
     compile 'com.gluonhq:ignite-guice:1.0.1'
-    compile 'org.projectlombok:lombok:1.16.10'
+    compile 'org.projectlombok:lombok:1.16.18'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.7'
     compile 'org.jsoup:jsoup:1.8.3'
-    compile 'commons-io:commons-io:2.4'
-    
-    
+
+    compile 'org.apache.logging.log4j:log4j-api:2.4.1'
+    compile 'org.apache.logging.log4j:log4j-core:2.4.1'
+
+//    FontAwesomeFx
     compile 'de.jensd:fontawesomefx-commons:8.15'
     compile 'de.jensd:fontawesomefx-materialicons:2.2.0-5'
     compile 'de.jensd:fontawesomefx-materialdesignfont:1.7.22-4'
@@ -52,31 +58,16 @@ dependencies {
 
 }
 
-
-javafx {
-    profiles {
-        linux {
-            category = 'Development'
-            //javaRuntime = '/usr/lib/jvm/java-7-oracle'
-
-            bundleArguments = [
-                    // for DEB bundles
-                    'email': 'support@example.com', // This is the email used for the deb maintainer field.
-            ]
-        }
-    }
-
+apply plugin: 'javafx-gradle-plugin'
+jfx {
+    // minimal requirement for jfxJar-task
     mainClass 'com.kn.elephant.note.Main'
 
-    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
-
-    // applet and webstart stuff
-    embedJNLP = false
+    // minimal requirement for jfxNative-task
+    vendor = 'KamilN-NoteFX'
+    appName = "Note-FX-Alpha"
+    additionalBundlerResources = 'src/main/resources'
 }
-
-jar {
-    manifest {
-        attributes('-x-bogus': 'a bogus attribute',
-                '-x-bogus-2': 'a second bogus attribute')
-    }
-}
+//gradle jfxJar - Create executable JavaFX-jar
+//gradle jfxNative - Create native JavaFX-bundle (will run jfxJar first)
+//gradle jfxRun - Create the JavaFX-jar and runs it like you would do using java -jar my-project-jfx.jar,
